[metadata]
name = sedfitter
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
license = BSD 2-Clause
license_files = licenses/LICENSE.rst
url = https://github.com/astrofrog/sedfitter
description = SED Fitter in Python
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = astrofrog/sedfitter

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    numpy>=1.18
    scipy>=1.3
    matplotlib>=3.1
    astropy>=5.0


[options.extras_require]
test =
    pytest
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    numpydoc

[options.package_data]
sedfitter.sed.tests = data/*.fits.gz
sedfitter.filter.tests = data/*.txt
sedfitter.utils.tests = data/*.conf, data/*.par

[tool:pytest]
testpaths = "sedfitter"

[coverage:run]
omit =
    sedfitter/conftest.py
    sedfitter/tests/*
    sedfitter/*/tests/*
    sedfitter/version*
    */sedfitter/conftest.py
    */sedfitter/tests/*
    */sedfitter/*/tests/*
    */sedfitter/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
